Fix user nav dropdown hiding behind event show page and update nav styling

--- a/app/assets/stylesheets/components/_navigation.scss
+++ b/app/assets/stylesheets/components/_navigation.scss
@@ -27,6 +27,13 @@
       color: inherit;
       display: flex;
       align-items: center;
+      color: #39364F;
+      font-size: 15px;
+    }
+    
+    .create {
+      color: #3d64ff;
+      font-weight: 600;
     }
   }
 
